--- a/src/Components/PokemonDetail/PokemonDetail.css
+++ b/src/Components/PokemonDetail/PokemonDetail.css
@@ -1,14 +1,24 @@
+*{
+    font-family: 'Roboto';
+}
+
 .detail-card{
     display: flex;
     flex-direction: column;
     align-items: center;
+    
     width: 100%;
     height: 100lvh;
 }
 
+.detail-card h2{
+    font-weight: 300;
+}
+
 .pokemon-detail{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    width: 100%;
 }
 
 .pokemon-detail img{
@@ -18,5 +28,41 @@
 .info-card{
     background-color: #30A7D7;
     display: flex;
-    width: 100%;
+    width: 400px;
+    height: 200px;
+    border: 4px solid rgb(5, 88, 84);
+    border-radius: 10px;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.column{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.column p{
+    margin-top: 2px;
+    color: white;
+}
+
+#detail-type-ctr{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    
+}
+
+.types{
+    display: flex;
+    justify-content: space-around;
+    
+}
+
+.types h4{
+    width: 100px;
+    margin: 3px 5px 0 5px;
+    padding: 7px 0;
+    
 }
