--- a/src/Components/Galery/Galery.css
+++ b/src/Components/Galery/Galery.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-wrap: wrap;
     font-family: 'Roboto';
+    width: 1150px;
+    margin: auto;
     
 }
 
@@ -110,3 +112,10 @@
     align-items: center;
     width: 100%;
 }
+
+#load img{
+    width: 300px;
+    height: auto;
+}
+
+
