--- a/src/Components/Galery/Galery.css
+++ b/src/Components/Galery/Galery.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     font-family: 'Roboto';
-    width: 100lh;
+    width: 100%;
     margin: auto;
     
 }
@@ -164,6 +164,10 @@
 #load img{
     width: 300px;
     height: auto;
+}
+
+@media only screen and (max-width: 480px){
+    
 }
 
 
