--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -94,3 +94,15 @@ header{
     width: 100%;
     height: 30px;
 }
+
+@media only screen and (max-width: 700px){
+
+    .header-content{
+        flex-direction: column;
+        
+    }
+
+    #search-box{
+        margin-bottom: 0;
+    }
+}
